[gd_scene load_steps=4 format=3 uid="uid://djh57b1ik4xva"]

[ext_resource type="Script" path="res://directions.gd" id="1_b11oo"]
[ext_resource type="Texture2D" uid="uid://dkajt1yya1mjh" path="res://UI/KennyUIPack/UI Textures/grey_arrowUpWhite.png" id="2_6arsp"]
[ext_resource type="Texture2D" uid="uid://cdokyuvspijwv" path="res://UI/KennyUIPack/UI Textures/yellow_boxTick.png" id="3_uj2l4"]

[node name="directions" type="Node2D"]
script = ExtResource("1_b11oo")

[node name="arrow key control" type="Node" parent="."]

[node name="UPTouchScreenButton" type="TouchScreenButton" parent="arrow key control"]
position = Vector2(580, 290)
scale = Vector2(4, 4)
texture_normal = ExtResource("2_6arsp")
texture_pressed = ExtResource("2_6arsp")

[node name="DownTouchScreenButton2" type="TouchScreenButton" parent="arrow key control"]
position = Vector2(643, 462)
rotation = 3.14159
scale = Vector2(4, 4)
texture_normal = ExtResource("2_6arsp")
texture_pressed = ExtResource("2_6arsp")

[node name="LeftTouchScreenButton3" type="TouchScreenButton" parent="arrow key control"]
position = Vector2(528, 416)
rotation = -1.5708
scale = Vector2(4, 4)
texture_normal = ExtResource("2_6arsp")
texture_pressed = ExtResource("2_6arsp")

[node name="RightTouchScreenButton4" type="TouchScreenButton" parent="arrow key control"]
position = Vector2(698, 351)
rotation = 1.5708
scale = Vector2(4, 4)
texture_normal = ExtResource("2_6arsp")
texture_pressed = ExtResource("2_6arsp")

[node name="JumpTouchScreenButton5" type="TouchScreenButton" parent="arrow key control"]
position = Vector2(645, 345)
rotation = 1.5708
scale = Vector2(1.85861, 1.8586)
texture_normal = ExtResource("3_uj2l4")
texture_pressed = ExtResource("3_uj2l4")

[connection signal="pressed" from="arrow key control/UPTouchScreenButton" to="." method="_on_up_touch_screen_button_pressed"]
[connection signal="released" from="arrow key control/UPTouchScreenButton" to="." method="_on_up_touch_screen_button_released"]
[connection signal="pressed" from="arrow key control/DownTouchScreenButton2" to="." method="_on_down_touch_screen_button_2_pressed"]
[connection signal="released" from="arrow key control/DownTouchScreenButton2" to="." method="_on_down_touch_screen_button_2_released"]
[connection signal="pressed" from="arrow key control/LeftTouchScreenButton3" to="." method="_on_left_touch_screen_button_3_pressed"]
[connection signal="released" from="arrow key control/LeftTouchScreenButton3" to="." method="_on_left_touch_screen_button_3_released"]
[connection signal="pressed" from="arrow key control/RightTouchScreenButton4" to="." method="_on_right_touch_screen_button_4_pressed"]
[connection signal="released" from="arrow key control/RightTouchScreenButton4" to="." method="_on_right_touch_screen_button_4_released"]
[connection signal="pressed" from="arrow key control/JumpTouchScreenButton5" to="." method="_on_jump_touch_screen_button_5_pressed"]
[connection signal="released" from="arrow key control/JumpTouchScreenButton5" to="." method="_on_jump_touch_screen_button_5_released"]
